--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@vkontakte/icons": "^2.27.0",
+    "@vkontakte/vk-bridge": "^2.7.2",
+    "@vkontakte/vk-miniapps-deploy": "^0.0.26",
+    "@vkontakte/vk-tunnel": "^0.1.3",
+    "@vkontakte/vkui": "^5.3.1",
+    "@vkontakte/vkui-tokens": "^4.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
