--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "tunnel": "vk-tunnel —insecure=1 —http-protocol=http —ws-protocol=ws —host=0.0.0.0 —port=3000"
   },
   "eslintConfig": {
     "extends": [
