--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "tunnel": "vk-tunnel —insecure=1 —http-protocol=http —ws-protocol=ws —host=0.0.0.0 —port=3000"
+    "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=3000"
   },
   "eslintConfig": {
     "extends": [
